[package]
name = "argo-graphql"
version = "0.1.0"
edition = "2021"
authors = ["Marc-Andre Giroux <marc@magiroux.com>"]
license = "MIT"
description = "An implementation of the Argo  binary serialization format for GraphQL"
keywords = ["graphql", "argo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-compiler = "1.0.0-beta.12"
thiserror = "1"
indexmap = "2.0.0"
